fixed feedback modal width too wide and hide scroll bar

--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -327,14 +327,14 @@ a.logo {
 .fb-content {
   margin: 10% auto;
   display: flex;
-  width: 100vw;
+  width: 90vw;
   background: var(--secondary-cl);
   padding: 0;
 }
 
 .ggl-fb-form {
   margin: 11% auto var(--mg-sm);
-  width: 100vw;
+  width: 90vw;
   height: 100vh;
 }
 
